fixed contrast issues prophets activity

--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -42,7 +42,7 @@ h2 {
 }
 
 h4 {
-  color: rgb(224, 224, 234);
+  color: rgb(255, 255, 255);
   margin: 0.5rem 0 0.5rem 0;
 }
 
